--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">📚 BookShare</div>
+            <div class="logo">📚 LibrariumHub</div>
             <div id="authButtons" class="nav-buttons">
                 <button class="btn btn-secondary" onclick="showSection('home')">Inicio</button>
                 <button class="btn btn-secondary" onclick="showSection('explore')">Explorar</button>
